<resources>
    <string name="app_name">Marvel HQs</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">LOG IN</string>
    <string name="creat_accout">Create account</string>
    <string name="user_name">Name</string>
    <string name="save">SAVE</string>
    <string name="register">Register</string>
    <string name="published">Published</string>
    <string name="price">Price</string>
    <string name="pages">Pages</string>

</resources>