<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fundo" >


    <TextView
        android:id="@+id/tvDetalheTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="LOREM IPSUM"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvDetalheSinopse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis, mi eget fringilla vestibulum, turpis ipsum tempor odio, vitae facilisis tellus lorem a elit. Sed velit sapien, euismod vel velit quis, lobortis ultricies nulla. Aenean non risus vitae erat fringilla tempor id id metus. Cras at aliquet lacus, vitae dictum mauris. Quisque porta mattis nisi, sed eleifend leo tincidunt a. Vestibulum pulvinar, lacus eu vehicula faucibus, mauris odio tempor dolor, in venenatis purus odio a nunc."
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/published"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDetalhePublished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/published"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDetalhePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/published"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pages"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDetalhePages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/published"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>


</LinearLayout>